[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manageconfig"
dependencies = [
  'PyYAML ~= 6.0'
]

version = "1.1.1"
authors = [
  {name="Guyshe"},
]
description = "Small package for working with config files"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/guyshe/manageconfig"
